# L-BFGS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: _formulas.tex  _formulas_dark.tex  annotated.html  bfgs_8hpp.html  bfgs_8hpp__dep__incl.map  bfgs_8hpp__dep__incl.md5  bfgs_8hpp__incl.map  bfgs_8hpp__incl.md5  bfgs_8hpp_source.html  classBFGS-members.html  classBFGS.html  classBFGS__coll__graph.map  classBFGS__coll__graph.md5  classBFGS_a037d353ea150ef231720075d5decfd44_cgraph.map  classBFGS_a037d353ea150ef231720075d5decfd44_cgraph.md5  classBFGS_aeb7ad8e284154092dc4b16c18f841c57_cgraph.map  classBFGS_aeb7ad8e284154092dc4b16c18f841c57_cgraph.md5  classLBFGS-members.html  classLBFGS.html  classLBFGS__coll__graph.map  classLBFGS__coll__graph.md5  classLBFGS__inherit__graph.md5  classLBFGS_acc3c0cb169d832d01fe8f9ef512e8d70_cgraph.map  classLBFGS_acc3c0cb169d832d01fe8f9ef512e8d70_cgraph.md5  classLBFGS_ae1515b407c1958e2cb51fe92d702ee7c_icgraph.map  classLBFGS_ae1515b407c1958e2cb51fe92d702ee7c_icgraph.md5  classMinimizerBase-members.html  classMinimizerBase.html  classMinimizerBase__inherit__graph.map  classMinimizerBase__inherit__graph.md5  classMinimizerBase_aa0769b6918189dfe63a223fdb38dfc0a_icgraph.map  classMinimizerBase_aa0769b6918189dfe63a223fdb38dfc0a_icgraph.md5  classNewton-members.html  classNewton.html  classNewton__inherit__graph.map  classNewton__inherit__graph.md5  classNewton_a272c891f46d6446a5b8958cf6b5a6876_cgraph.map  classNewton_a272c891f46d6446a5b8958cf6b5a6876_cgraph.md5  classes.html  common_8hpp.html  (+40 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  (+18 more)
src/: bfgs.hpp  common.hpp  lbfgs.hpp  main.cpp  minimizer_base.hpp  newton.hpp  ring_buffer.hpp  t
tests/: main.cpp  test.hpp
